--- a/amma.css
+++ b/amma.css
@@ -240,6 +240,7 @@
   font-size: 2em;
   line-height: 2.1em;
   text-shadow: 0 1px 3px rgba(0, 0, 0, .5);
+  word-break: break-word;
 }
 .answer h3,h4{
   font-size: 29px;
