--- a/templates/test.template.html
+++ b/templates/test.template.html
@@ -1,4 +1,4 @@
-<div full-cover-image="img/flower-bg.jpg"  ng-hide="state === 'end'" ng-swipe-left="undo()"></div>
+<div full-cover-image="img/feet.jpg"  ng-hide="state === 'end'" ng-swipe-left="undo()"></div>
 <div full-cover-image="img/creator.jpg"  ng-if="state === 'end'" ng-click="showResults()"></div>
 
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation" >
