--- a/templates/learn.template.html
+++ b/templates/learn.template.html
@@ -1,5 +1,5 @@
-<div full-cover-image="img/flower-bg.jpg" ng-hide="state === 'end'"
-  ng-swipe-left="next()" ng-swipe-right="prev()" ng-click="next()"></div>
+<div full-cover-image="img/feet.jpg" ng-hide="state === 'end'"
+  ng-swipe-left="next($event);" ng-swipe-right="prev($event);" ng-click="next($event);"></div>
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
@@ -37,11 +37,10 @@
 </div>
 
 
-<div class="container" ng-swipe-left="next()" ng-swipe-right="prev()"
-  ng-click="next()">
+<div class="container" class="noselect">
     <div class="row clearfix">
-        <div class="col-md-12" ng-swipe-left="next()" ng-swipe-right="prev()" >
-            <div class="text-center noselect answer" ng-swipe-left="prev()" ng-swipe-right="next()" >
+        <div class="col-md-12" >
+            <div class="text-center answer" >
                 <h3 ng-bind-html="verse()" ng-style="getColor()"></h3>
                 <h4 ng-if="displayMeaning === true" ng-bind-html="meaning()"></h4>
             </div>
@@ -54,18 +53,18 @@
 <div class="row clearfix fixed-footer" ng-if="!mobile">
   <div ng-if="!left" ng-init="left=false">
     <div class="col-xs-6" ng-if="state === 'show'">
-        <button type="button" class="btn btn-lg btn-outline" ng-click="next()">Next</button>
+        <button type="button" class="btn btn-lg btn-outline" ng-click="next($event);">Next</button>
     </div>
     <div class="col-xs-6" ng-if="state === 'show'">
-        <button type="button" class="btn btn-lg btn-outline" ng-click="prev()">Back</button>
+        <button type="button" class="btn btn-lg btn-outline" ng-click="prev($event);">Back</button>
     </div>
   </div>
   <div ng-if="left">
     <div class="col-xs-6" ng-if="state === 'show'">
-        <button type="button" class="btn btn-lg btn-outline" ng-click="prev()">Back</button>
+        <button type="button" class="btn btn-lg btn-outline" ng-click="prev($event);">Back</button>
     </div>
     <div class="col-xs-6" ng-if="state === 'show'">
-        <button type="button" class="btn btn-lg btn-outline" ng-click="next()">Next</button>
+        <button type="button" class="btn btn-lg btn-outline" ng-click="next($event);">Next</button>
     </div>
   </div>
 </div>
