fixes tap to advance

--- a/templates/learn.template.html
+++ b/templates/learn.template.html
@@ -37,7 +37,7 @@
 </div>
 
 
-<div class="container" class="noselect">
+<div class="container" class="noselect" ng-swipe-left="next($event);" ng-swipe-right="prev($event);" ng-click="next($event);">
     <div class="row clearfix">
         <div class="col-md-12" >
             <div class="text-center answer" >
