--- a/templates/learn.template.html
+++ b/templates/learn.template.html
@@ -37,16 +37,18 @@
 </div>
 
 
-<div class="container" class="noselect" ng-swipe-left="next($event);" ng-swipe-right="prev($event);" ng-click="next($event);">
+<div ng-swipe-left="next($event);" ng-swipe-right="prev($event);" ng-click="next($event);" >
     <div class="row clearfix">
         <div class="col-md-12" >
             <div class="text-center answer" >
-                <h3 ng-bind-html="verse()" ng-style="getColor()"></h3>
+                <!-- animate-on-change="verse()" -->
+                <h3 ng-style="getColor()" class="slide-and-fade-up"  ng-bind-html="verse()" ></h3>
                 <h4 ng-if="displayMeaning === true" ng-bind-html="meaning()"></h4>
             </div>
         </div>
     </div>
 </div>
+<audio id="verseAudio" ng-src="{{getAudioSegmentSrc()}}" preload="auto" autoplay="autoplay"></audio>
 
 <!-- Answer Buttons -->
 
