wip fixing manifest

--- a/templates/item-lister.template.html
+++ b/templates/item-lister.template.html
@@ -7,10 +7,10 @@
     <div class="col-md-10">
       <div class="masonry">
         <div class="thumbnail item" ng-repeat="item in items">
-          <a ng-href="{{'#/howto/' + item.id}}" class="thumb"><img ng-src="{{item.image}}"></a>
-          <a ng-href="{{'#/howto/' + item.id}}">{{item.title}}</a>
+          <a ng-href="{{'#/learn/' + item.id}}" class="thumb"><img ng-src="{{item.image}}"></a>
+          <a ng-href="{{'#/learn/' + item.id}}">{{item.title}}</a>
           <p>{{item.description}}</p>
-        </div> 
+        </div>
       </div>
     </div>
 
@@ -28,4 +28,3 @@
     </div>
   </div>
 </div>
-
