--- a/amma.css
+++ b/amma.css
@@ -300,9 +300,6 @@ html {
   font-size: 2em;
 }
 
-navbar.navbar-inverse.navbar-fixed-top {
-  padding-bottom: 15px;
-}
 
 
 @media screen and (max-width: 9991px){
@@ -326,15 +323,42 @@ navbar.navbar-inverse.navbar-fixed-top {
     .navbar-nav>li,.navbar-header{
         float:none; 
     }
-    .navbar-default .navbar-toggle.collapsed{
-        background:#fff;    
-    }
     body  {
       padding-top: 30px;
     }
     .navbar-nav span,label {
       color: white;
     }
+}
+
+.heart {
+  position: relative;
+  font-size: 24px;
+  margin-top:-0.5em;
+  width:0;
+  height:0;
+}
+
+.heart::before, .heart::after {
+  position: absolute;
+  content: "";
+  width: 1em;
+  height: 1.6em;
+  background: #2C2C2C;
+  border-radius: 1em 1em 0 0;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-transform-origin: 0 100%;
+  transform-origin: 0 100%;
+}
+
+
+.heart::after {
+left: -0.96em;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  -webkit-transform-origin: 100% 100%;
+  transform-origin: 100% 100%;
 }
 
 /*!
