--- a/templates/learn.template.html
+++ b/templates/learn.template.html
@@ -19,13 +19,13 @@ ng-swipe-left="next($event);" ng-swipe-right="prev($event);" ng-click="next($eve
       <ul class="nav navbar-nav" >
 
       <div class="container" >
-        <div class="row-fluid">
+        <div class="row-fluid clearfix">
           <!-- <div class="col-md-4"> -->
             <input class="btn btn-danger" type="reset" value="Reset" ng-click="VerseHandler.state.currentPosition = 0">
           <!-- </div> -->
           
         </div>
-        <div class="row-fluid">
+        <div class="row-fluid clearfix">
           <div class="col-md-6">
             <div class="checkbox checkbox-slider--c checkbox-slider-lg">
               <label ng-if="!mobile">
@@ -41,7 +41,7 @@ ng-swipe-left="next($event);" ng-swipe-right="prev($event);" ng-click="next($eve
             </div>
           </div>
         </div>
-        <div class="row-fluid">
+        <div class="row-fluid clearfix" ng-if="hasAudio">
           <div class="col-md-6">
             <div class="checkbox checkbox-slider--c-weight checkbox-slider-lg">
               <label>
@@ -58,8 +58,8 @@ ng-swipe-left="next($event);" ng-swipe-right="prev($event);" ng-click="next($eve
           </div>
         </div>
 
-        <div class="row-fluid"> 
-          <div class="col-md-6">
+        <div class="row-fluid clearfix"> 
+          <div class="col-md-6" ng-if="hasAudio">
             <label>Audio Playback rate</label>
             <input type="number" max="3" min="0.3" step=".1" value="{{settings.audioPlaybackRate}}" ng-model="settings.audioPlaybackRate" ng-change="updateAudioSettings()">    
           </div>
