--- a/templates/learn.template.html
+++ b/templates/learn.template.html
@@ -26,14 +26,14 @@ ng-swipe-left="next($event);" ng-swipe-right="prev($event);" ng-click="next($eve
           
         </div>
         <div class="row-fluid clearfix">
-          <div class="col-md-6">
+          <div class="col-sm-6">
             <div class="checkbox checkbox-slider--c checkbox-slider-lg">
               <label ng-if="!mobile">
                 <input type="checkbox" ng-model="settings.layoutSide" ng-true-value="'Right'" ng-false-value="'Left'"><span>{{settings.layoutSide}} Handed</span>
               </label>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-sm-6">
             <div class="checkbox checkbox-slider--c-weight checkbox-slider-lg">
               <label>
                 <input type="checkbox" ng-model="settings.meaning" ng-true-value="'On'" ng-false-value="'Off'"><span>Meaning {{settings.meaning}}</span>
@@ -42,14 +42,14 @@ ng-swipe-left="next($event);" ng-swipe-right="prev($event);" ng-click="next($eve
           </div>
         </div>
         <div class="row-fluid clearfix" >
-          <div class="col-md-6">
+          <div class="col-sm-6">
             <div class="checkbox checkbox-slider--c-weight checkbox-slider-lg">
               <label>
                 <input type="checkbox" ng-model="settings.audio" ng-true-value="'On'" ng-false-value="'Off'" ><span>Audio Controls {{settings.audio}}</span>
               </label>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-sm-6">
             <div class="checkbox checkbox-slider--c-weight checkbox-slider-lg">
               <label>
                 <input type="checkbox" ng-model="settings.autoplay" ng-true-value="'On'" ng-false-value="'Off'" ng-change="updateAudioSettings()"><span>Autoplay Audio {{settings.autoplay}}</span>
@@ -59,13 +59,13 @@ ng-swipe-left="next($event);" ng-swipe-right="prev($event);" ng-click="next($eve
         </div>
 
         <div class="row-fluid clearfix"> 
-          <div class="col-md-6" >
+          <div class="col-sm-6" >
             <label>Audio Playback rate</label>
             <input type="number" max="3" min="0.3" step=".1" value="{{settings.audioPlaybackRate}}" ng-model="settings.audioPlaybackRate" ng-change="updateAudioSettings()">    
           </div>
         </div>
         <div class="row-fluid"> 
-          <div class="col-md-6">
+          <div class="col-sm-6">
             <label>Position</label>
             <!-- dangerous - better to set watch -->
             <input type="number" ng-model="VerseHandler.state.currentPosition" >    
