--- a/templates/learn.template.html
+++ b/templates/learn.template.html
@@ -29,31 +29,31 @@ ng-swipe-left="next($event);" ng-swipe-right="prev($event);" ng-click="next($eve
           <div class="col-sm-6">
             <div class="checkbox checkbox-slider--c checkbox-slider-lg">
               <label ng-if="!mobile">
-                <input type="checkbox" ng-model="settings.layoutSide" ng-true-value="'Right'" ng-false-value="'Left'"><span>{{settings.layoutSide}} Handed</span>
+                <input type="checkbox" ng-model="storage.layoutSide" ng-true-value="'Right'" ng-false-value="'Left'"><span>{{storage.layoutSide}} Handed</span>
               </label>
             </div>
           </div>
           <div class="col-sm-6">
             <div class="checkbox checkbox-slider--c-weight checkbox-slider-lg">
               <label>
-                <input type="checkbox" ng-model="settings.meaning" ng-true-value="'On'" ng-false-value="'Off'"><span>Meaning {{settings.meaning}}</span>
+                <input type="checkbox" ng-model="storage.meaning" ng-true-value="'On'" ng-false-value="'Off'"><span>Meaning {{storage.meaning}}</span>
               </label>
             </div>
           </div>
         </div>
-        <div ng-if="settings.hasAudio">
+        <div ng-if="storage.hasAudio">
           <div class="row-fluid clearfix" >
             <div class="col-sm-6">
               <div class="checkbox checkbox-slider--c-weight checkbox-slider-lg">
                 <label>
-                  <input type="checkbox" ng-model="settings.audio" ng-true-value="'On'" ng-false-value="'Off'" ><span>Audio Controls {{settings.audio}}</span>
+                  <input type="checkbox" ng-model="storage.audio" ng-true-value="'On'" ng-false-value="'Off'" ><span>Audio Controls {{storage.audio}}</span>
                 </label>
               </div>
             </div>
             <div class="col-sm-6">
               <div class="checkbox checkbox-slider--c-weight checkbox-slider-lg">
                 <label>
-                  <input type="checkbox" ng-model="settings.autoplay" ng-true-value="'On'" ng-false-value="'Off'" ng-change="updateAudioSettings()"><span>Autoplay Audio {{settings.autoplay}}</span>
+                  <input type="checkbox" ng-model="storage.autoplay" ng-true-value="'On'" ng-false-value="'Off'" rz-slider-on-change="updateAudioSettings()"><span>Autoplay Audio {{storage.autoplay}}</span>
                 </label>
               </div>
             </div>
@@ -61,10 +61,10 @@ ng-swipe-left="next($event);" ng-swipe-right="prev($event);" ng-click="next($eve
         </div>
 
         <div class="row-fluid clearfix"> 
-          <div class="col-sm-6" ng-if="settings.hasAudio">
+          <div class="col-sm-6" ng-if="storage.hasAudio">
             <label>Audio Playback rate</label>
-            <input type="number" max="3" min="0.3" step=".1" value="{{settings.audioPlaybackRate}}" ng-model="settings.audioPlaybackRate" ng-change="updateAudioSettings()">
-            <rzslider rz-slider-model="settings.audioPlaybackRate" rz-slider-ceil="3" rz-slider-floor=".4" rz-slider-step=".1" rz-slider-precision="1"></rzslider>
+            <input type="number" max="3" min="0.3" step=".1" value="{{storage.audioPlaybackRate}}" ng-model="storage.audioPlaybackRate" ng-change="updateAudioSettings()">
+            <rzslider rz-slider-model="storage.audioPlaybackRate" rz-slider-ceil="3" rz-slider-floor=".4" rz-slider-step=".1" rz-slider-precision="1" ng-change="updateAudioSettings()"></rzslider>
           </div>
         </div>
         <div class="row-fluid"> 
@@ -85,39 +85,39 @@ ng-swipe-left="next($event);" ng-swipe-right="prev($event);" ng-click="next($eve
   <div class="col-xs-12">
     <div class="text-center answer" >
       <h3 ng-style="getColor()" ng-bind-html="verse()" ></h3>
-      <h4 ng-if="settings.meaning == 'On'" ng-bind-html="meaning()"></h4>
+      <h4 ng-if="storage.meaning == 'On'" ng-bind-html="meaning()"></h4>
     </div>
   </div>
 </div>
 
 <audio id="audioPlayer" ng-src="{{VerseHandler.audioURL}}" ></audio>
 
-<div class="fluid-row clearfix fixed-footer" ng-if="!mobile || settings.audio == 'On'">
+<div class="fluid-row clearfix fixed-footer" ng-if="!mobile || storage.audio == 'On'">
   <div ng-if="!mobile" ng-swipe-left="next($event);" ng-swipe-right="prev($event);" ng-click="next($event);">
-    <div ng-if="settings.layoutSide == 'Left'">
-      <div class="col-xs-{{ (settings.audio == 'On') ? '4' : '6' }}">
+    <div ng-if="storage.layoutSide == 'Left'">
+      <div class="col-xs-{{ (storage.audio == 'On') ? '4' : '6' }}">
         <button type="button" class="btn btn-lg btn-outline" ng-click="next($event);">Next</button>
       </div>
-      <div class="col-xs-4" ng-if="settings.audio == 'On'">
+      <div class="col-xs-4" ng-if="storage.audio == 'On'">
         <button type="button" class="btn btn-lg btn-outline" ng-click="playAudio($event)">Play</button>
       </div>
-      <div class="col-xs-{{ (settings.audio == 'On') ? '4' : '6' }}">
+      <div class="col-xs-{{ (storage.audio == 'On') ? '4' : '6' }}">
         <button type="button" class="btn btn-lg btn-outline" ng-click="prev($event);">Back</button>
       </div>
     </div>
-    <div ng-if="settings.layoutSide == 'Right'">
-      <div class="col-xs-{{ (settings.audio == 'On') ? '4' : '6' }}">
+    <div ng-if="storage.layoutSide == 'Right'">
+      <div class="col-xs-{{ (storage.audio == 'On') ? '4' : '6' }}">
         <button type="button" class="btn btn-lg btn-outline" ng-click="prev($event);">Back</button>
       </div>
-      <div class="col-xs-4" ng-if="settings.audio == 'On'">
+      <div class="col-xs-4" ng-if="storage.audio == 'On'">
         <button type="button" class="btn btn-lg btn-outline" ng-click="playAudio($event)">Play</button>
       </div>
-      <div class="col-xs-{{ (settings.audio == 'On') ? '4' : '6' }}">
+      <div class="col-xs-{{ (storage.audio == 'On') ? '4' : '6' }}">
         <button type="button" class="btn btn-lg btn-outline" ng-click="next($event);">Next</button>
       </div>
     </div>
   </div>
-  <div class="col-xs-12" ng-if="mobile && settings.audio == 'On'" >
+  <div class="col-xs-12" ng-if="mobile && storage.audio == 'On'" >
     <button type="button" class="btn btn-lg btn-outline" ng-click="playAudio($event)">Play</button>
   </div>
 </div>
